--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".TVFavorites"
+            android:name=".SearchActivity"
             android:label="@string/title_activity_tvfavorites" >
+        </activity>
+        <activity android:name=".FavoritesActivity" >
+        </activity>
+        <activity android:name=".ViewShowActivity" >
         </activity>
     </application>
 
